--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "element-plus": "^2.11.1",
     "pinia": "^3.0.3",
     "sass": "^1.91.0",
