--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
+    "video.js": "^8.23.4",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
