--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "resolutions": {
+    "bin-wrapper": "npm:bin-wrapper-china"
+  },
   "name": "yike",
   "version": "0.0.0",
   "private": true,
@@ -9,6 +12,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:analyze": "vite build --mode analyze",
     "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
@@ -17,6 +21,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.11.0",
     "element-plus": "^2.11.1",
+    "imagemin-webp": "^8.0.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "sass": "^1.91.0",
@@ -31,8 +36,13 @@
     "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "prettier": "3.6.2",
+    "rollup-plugin-visualizer": "^6.0.4",
+    "unplugin-auto-import": "^20.2.0",
+    "unplugin-icons": "^22.4.2",
+    "unplugin-vue-components": "^29.1.0",
     "video.js": "^8.23.4",
     "vite": "^7.0.6",
+    "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-vue-devtools": "^8.0.0"
   }
 }
