feat:新增后端，新增视频上传页

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# 包管理器锁文件（根据您的选择）
+package-lock.json   # 如果使用 npm
+yarn.lock          # 如果使用 yarn
+pnpm-lock.yaml 应该被提交，所以不要忽略
